# geophysical_nav

./: .dockerignore  .funcignore  .gitignore  78123006.csv  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  _pyproject.toml  app.py  bathy_pf.ipynb  bathy_pf.py  blob_quickstart.py  build-image.sh  builder.sh  cleanup.sh  config.json  data_cleaner.ipynb  environment.yml  file_transfer.sh  function_app.py  geonav_notebook.ipynb  gmt.history  old_pyproject.toml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yml  setup.py  setup_env.sh
.devcontainer/: devcontainer.json
.github/attic/: main_GeophysicalNavigation.yml
.github/workflows/: build_and_deploy.yml  lint_and_test.yml  main_GeophysicalNavigation.yml  main_geophysicalnavigation.yml  test_and_lint.yml
DatabaseProjecttestdb/: DatabaseProjecttestdb.sqlproj
app/: __init__.py  db.py  home.py
app/attic/: auth.py  blog.py
app/templates/: base.html  index.html
app/templates/db/: upload.html
attic/: CMakeLists.txt  dataset_toolbox.py  earth_module.cpp
attic/attic/app/: home.py
attic/attic/app/templates/db/: parse.html
attic/include/: earth.hpp  strapdown.hpp
attic/src/: earth.cpp  main.cpp  strapdown.cpp
data/cleaned/: 2023-08-09_124742.csv  2023-08-09_163741.csv  2025-03-01_150426.csv  2025-03-01_164639.csv
data/raw/2023-08-06_144805/: Location.csv  LocationGps.csv  LocationNetwork.csv  Metadata.csv
data/raw/2023-08-09_124742/: Location.csv  LocationGps.csv  LocationNetwork.csv  Metadata.csv
data/raw/2023-08-09_163741/: Location.csv  LocationGps.csv  LocationNetwork.csv  Metadata.csv
data/raw/2024-06-20_165550/: Location.csv  LocationGps.csv  LocationNetwork.csv  Metadata.csv
data/raw/2025-03-01_150426/: Location.csv  Metadata.csv
data/raw/2025-03-01_164639/: Location.csv  Metadata.csv
geonavdatabase/: geonavdatabase.sqlproj  tracklines.sql
geonavdb/: create_geophysical_measurements_table.sql  geonavdb.sqlproj
scripts/: bathy_pf.ipynb  bathy_pf.py  config.json  gravity_pf.py  open_loop.py  open_loop_grav.py  open_loop_mag.py  readme.md  test_pixi.py
scripts/attic/: bathy_pf.py  gravity_pf.py
scripts/bathy_pf_results/delocalized/: below_pixel.csv  certain_below_pixel.csv  certain_recoveries.csv  recoveries.csv  summary.csv  summary_statements.txt  trajectory_summary.csv
scripts/bathy_pf_results/localized/: below_pixel.csv  certain_below_pixel.csv  certain_recoveries.csv  recoveries.csv  summary.csv  summary_statements.txt  trajectory_summary.csv
scripts/grav_pf_results/delocalized/: below_pixel.csv  certain_below_pixel.csv  certain_recoveries.csv  estimate_error_summary_time.csv  recoveries.csv  summary.csv  trajectory_summary.csv
scripts/grav_pf_results/localized/: below_pixel.csv  certain_below_pixel.csv  certain_recoveries.csv  estimate_error_summary_time.csv  recoveries.csv  summary.csv  trajectory_summary.csv
scripts/mag_pf_results/delocalized/: below_pixel.csv  certain_below_pixel.csv  certain_recoveries.csv  estimate_error_summary_time.csv  recoveries.csv  summary.csv  trajectory_summary.csv
scripts/mag_pf_results/localized/: below_pixel.csv  certain_below_pixel.csv  certain_recoveries.csv  estimate_error_summary_time.csv  recoveries.csv  summary.csv  trajectory_summary.csv
setup/: install_pyins.sh
setup_scripts/: install_pyins.ps1
source_data/: 78123006.m77t  ew0007.m77t  ew0102.m77t  ew0112.m77t  ew9704.m77t  wi933014.m77t
src/: earth.rs  earth_module.cpp  filter.rs  gmt_tool.py  main.cpp  main.rs  navtoolbox.rs  particle_filter.py  process_dataset.py  strapdown.rs
src/app/: __init__.py  db.py
src/app/templates/: base.html
src/app/templates/attic/blog/: index.html
src/app/templates/home/: index.html
src/attic/: attic.py  dataset_toolbox.py
src/attic/app/: db.py
src/attic/app/attic/: auth.py  blog.py  old_app.py
src/attic/app/templates/attic/blog/: create.html
src/ctest/: fib.py
src/data_management/: dbmgr.py  m77t.py
src/data_manager/: __init__.py  m77t.py
src/data_managment/: dbmgr.py  m77t.py
src/geophysical/: db_tools.py  dbmgr.py  gmt_tool.py  gmt_toolbox.py  m77t_toolbox.py  open_loop_sim.py  particle_filter.py  process_dataset.py  sim.py  tools.py
src/geophysical_nav/: __init__.py
src/geophysical_nav/data_management/: dbmgr.py  m77t.py
src/geophysical_nav/geophysical/: gmt_toolbox.py  open_loop_sim.py  particle_filter.py
src/include/: earth.hpp  strapdown.hpp
src/navtoolbox/: __init__.pyi  earth.pyi  integrate.pyi  navtoolbox.cpp  transform.pyi  util.pyi
src/navtoolbox/include/: earth.hpp  integrate.hpp  particle_filter.hpp  transform.hpp  util.hpp
src/navtoolbox/src/: earth.cpp  integrate.cpp  navtoolbox.cpp  transform.cpp  util.cpp
src/src/: earth.cpp  main.cpp  strapdown.cpp
test/: test_data.csv  test_db_tools.py  test_dbmgr.py  test_gmt_toolbox.py  test_m77t.py  test_m77t_toolbox.py  test_open_loop.py  test_particle_filter.py  test_tools.py
