[package]
name = "geophysical_nav"
version = "0.1.0"
edition = "2024"

# Add in main
[[bin]]
name = "geophysical_nav_sim"
path = "src/main.rs"

[lib]
name = "navtoolbox"
path = "src/navtoolbox.rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
angle = "0.5.0"
assert_approx_eq = "1.1.0"
nalgebra = "0.33.2"
nav-types = "0.5.2"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py39"] }
rand = "0.9.0"
simba = "0.9.0"
