[project]
name = "geophysical-nav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Brodovsky", email = "james.brodovsky@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anglewrapper>=0.1.1",
    "filterpy>=1.4.5",
    "h5py>=3.13.0",
    "haversine>=2.9.0",
    "ipython>=9.0.1",
    "matplotlib>=3.10.1",
    "numba>=0.61.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pygmt>=0.14.2",
    "python-ins>=1.0.1",
    "pytz>=2025.1",
    "ruff>=0.9.9",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.38",
    "tqdm>=4.67.1",
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = [
    "-DCMAKE_CXX_FLAGS=-Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -Wshadow",
    "-DCMAKE_CXX_FLAGS_RELEASE=-O2 -DNDEBUG",
    "-DCMAKE_CXX_FLAGS_DEBUG=-g -fsanitize=address -fsanitize=undefined -fsanitize=leak -fsanitize=thread"
]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64"]


[tool.pixi.pypi-dependencies]
geophysical-nav = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pybind11 = ">=2.13.6,<3"
eigen = ">=3.4.0,<4"
pip = ">=25.0.1,<26"
