[project]
name = "geophysical-nav"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Brodovsky", email = "james.brodovsky@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anglewrapper",
    "filterpy",
    "h5py",
    "haversine",
    "ipython",
    "matplotlib",
    "numba",
    "numpy",
    "pandas",
    "pygmt",
    "python-ins",
    "pytz",
    "ruff",
    "scikit-learn",
    "sqlalchemy",
    "tqdm",
]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = [
    "-DCMAKE_CXX_FLAGS=-Wall -Wextra -Wpedantic -Wconversion -Wsign-conversion -Wshadow",
    "-DCMAKE_CXX_FLAGS_RELEASE=-O2 -DNDEBUG",
    "-DCMAKE_CXX_FLAGS_DEBUG=-g -fsanitize=address -fsanitize=undefined -fsanitize=leak -fsanitize=thread"
]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "win-64"]


[tool.pixi.pypi-dependencies]
geophysical-nav = { path = ".", editable = true }

[tool.pixi.tasks]
build = "uv build"
install = {cmd = "uv pip install .", depends-on = ["build"]}

[tool.pixi.dependencies]
pybind11 = "*"
eigen = "*"
ninja = "*"
cmake = "*"

